# TizenRT

./: .gitignore
apps/examples/appfw_test/: Kconfig  appfw_test_main.c
apps/examples/esp32_wifi_demo/: Kconfig  Kconfig_ENTRY  Make.defs  Makefile  esp32_tash_main.c  esp32_wifi_demo.c  softap.c  station.c
apps/examples/st_things/: Kconfig  Kconfig_ENTRY  st_things_sample_main.c
apps/system/utils/: kdbg_stackmonitor.c  utils_heapinfo.c  utils_proc.c  utils_stackmonitor.c
framework/include/app/: app.h  app_common.h  app_common_extension.h  app_common_internal.h  app_context.h  app_control.h  app_control_internal.h  app_event.h  app_i18n.h  app_info.h  app_internal.h  app_manager.h  app_resource_manager.h  app_types.h  bundle.h  service_app.h  service_app_internal.h
framework/include/media/: DataSource.h  MediaTypes.h  MediaUtils.h
framework/src/app/: Make.defs
framework/src/app/amd/: CMakeLists.txt  libamd.pc.in
framework/src/app/amd/inc/: amd.h  amd_api.h  amd_api_app_com.h  amd_api_app_property.h  amd_api_app_status.h  amd_api_appinfo.h  amd_api_config.h  amd_api_cynara.h  amd_api_inotify.h  amd_api_launch.h  amd_api_launch_context.h  amd_api_launchpad.h  amd_api_login_monitor.h  amd_api_noti.h  amd_api_proc.h  amd_api_request.h  amd_api_signal.h  amd_api_socket.h  amd_api_suspend.h  amd_api_util.h  amd_api_wayland.h  amd_app_com.h  amd_app_property.h  amd_app_status.h  amd_appinfo.h  amd_config.h  amd_cynara.h  amd_inotify.h  amd_launch.h  amd_launchpad.h  amd_login_monitor.h  amd_noti.h  amd_proc.h  amd_request.h  amd_signal.h  amd_socket.h  amd_suspend.h  amd_util.h  app_signal.h  aul_svc_priv_key.h
framework/src/app/amd/modules/: CMakeLists.txt
framework/src/app/amd/modules/boost/: CMakeLists.txt
framework/src/app/amd/modules/boost/inc/: amd_boost_private.h
framework/src/app/amd/modules/boost/src/: amd_boost.c
framework/src/app/amd/modules/complication/: CMakeLists.txt
framework/src/app/amd/modules/complication/inc/: amd_complication_private.h
framework/src/app/amd/modules/complication/src/: amd_complication.c
framework/src/app/amd/modules/cooldown/: CMakeLists.txt
framework/src/app/amd/modules/cooldown/inc/: amd_cooldown.h
framework/src/app/amd/modules/cooldown/src/: amd_cooldown.c
framework/src/app/amd/modules/cynara-core/: CMakeLists.txt
framework/src/app/amd/modules/cynara-core/inc/: amd_cynara_core.h
framework/src/app/amd/modules/cynara-core/src/: amd_cynara_core.c
framework/src/app/amd/modules/extractor/: CMakeLists.txt
framework/src/app/amd/modules/extractor/inc/: amd_extractor.h
framework/src/app/amd/modules/extractor/src/: amd_extractor.c
framework/src/app/amd/modules/input/: CMakeLists.txt
framework/src/app/amd/modules/input/conf/: amd_input.conf
framework/src/app/amd/modules/input/inc/: amd_input_config.h  amd_input_private.h
framework/src/app/amd/modules/input/src/: amd_input.c  amd_input_config.c
framework/src/app/amd/modules/job-scheduler/: CMakeLists.txt
framework/src/app/amd/modules/job-scheduler/inc/: amd_job_scheduler_private.h
framework/src/app/amd/modules/job-scheduler/src/: amd_job_scheduler.c
framework/src/app/amd/modules/launchpad/: CMakeLists.txt
framework/src/app/amd/modules/launchpad/inc/: launcher_info.h  launchpad-private.h
framework/src/app/amd/modules/launchpad/src/: launcher_info.c  launchpad.c
framework/src/app/amd/modules/rpc-port/: CMakeLists.txt
framework/src/app/amd/modules/rpc-port/inc/: amd_rpc_port_private.h
framework/src/app/amd/modules/rpc-port/src/: amd_rpc_port.c
framework/src/app/amd/modules/rua/: CMakeLists.txt
framework/src/app/amd/modules/rua/inc/: amd_rua.h
framework/src/app/amd/modules/rua/src/: amd_rua.c
framework/src/app/amd/modules/share/: CMakeLists.txt
framework/src/app/amd/modules/share/inc/: amd_share.h
framework/src/app/amd/modules/share/src/: amd_share.c
framework/src/app/amd/modules/splash-screen/: CMakeLists.txt
framework/src/app/amd/modules/splash-screen/inc/: splash-screen-private.h
framework/src/app/amd/modules/splash-screen/src/: splash-screen.c
framework/src/app/amd/modules/ui-core/: CMakeLists.txt
framework/src/app/amd/modules/ui-core/inc/: amd_app_group.h  amd_screen_connector.h  status.h
framework/src/app/amd/modules/ui-core/src/: amd_app_group.c  amd_screen_connector.c  status.c  ui_core.c
framework/src/app/amd/modules/watch/: CMakeLists.txt
framework/src/app/amd/modules/watch/inc/: amd_watch.h
framework/src/app/amd/modules/watch/src/: amd_watch.c
framework/src/app/amd/modules/watchdog/: CMakeLists.txt
framework/src/app/amd/modules/watchdog/inc/: amd_watchdog_config.h  amd_watchdog_logger.h  amd_watchdog_private.h
framework/src/app/amd/modules/watchdog/src/: amd_watchdog.c  amd_watchdog_config.c  amd_watchdog_logger.c
framework/src/app/amd/modules/wayland-core/: CMakeLists.txt
framework/src/app/amd/modules/wayland-core/inc/: wayland-core-private.h
framework/src/app/amd/modules/wayland-core/src/: wayland-core.c
framework/src/app/amd/modules/widget/: CMakeLists.txt
framework/src/app/amd/modules/widget/inc/: amd_widget_logger.h
framework/src/app/amd/modules/widget/src/: amd_widget.c  amd_widget_logger.c  amd_widget_private.h
framework/src/app/amd/packaging/: ac.service  amd.spec
framework/src/app/amd/src/amd/: main.c
framework/src/app/amd/src/lib/: amd_api_app_com.c  amd_api_app_property.c  amd_api_app_status.c  amd_api_appinfo.c  amd_api_config.c  amd_api_cynara.c  amd_api_inotify.c  amd_api_launch.c  amd_api_launch_context.c  amd_api_launchpad.c  amd_api_login_monitor.c  amd_api_noti.c  amd_api_proc.c  amd_api_request.c  amd_api_signal.c  amd_api_socket.c  amd_api_suspend.c  amd_api_util.c  amd_api_wayland.c  amd_app_com.c  amd_app_property.c  amd_app_status.c  amd_appinfo.c  amd_config.c  amd_cynara.c  amd_inotify.c  amd_launch.c  amd_launchpad.c  amd_login_monitor.c  amd_main.c  amd_noti.c  amd_proc.c  amd_request.c  amd_signal.c  amd_socket.c  amd_suspend.c  amd_util.c
framework/src/media/: DataSource.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  FileInputDataSource.cpp  (+9 more)
os/arch/: Kconfig
(+262 files in other folders)
