CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

ADD_SUBDIRECTORY(wayland-core)
ADD_SUBDIRECTORY(cooldown)
ADD_SUBDIRECTORY(splash-screen)
ADD_SUBDIRECTORY(input)
ADD_SUBDIRECTORY(widget)
ADD_SUBDIRECTORY(launchpad)
ADD_SUBDIRECTORY(share)
ADD_SUBDIRECTORY(ui-core)
ADD_SUBDIRECTORY(extractor)
ADD_SUBDIRECTORY(cynara-core)
ADD_SUBDIRECTORY(rua)
ADD_SUBDIRECTORY(watch)
ADD_SUBDIRECTORY(job-scheduler)
ADD_SUBDIRECTORY(boost)
ADD_SUBDIRECTORY(rpc-port)
ADD_SUBDIRECTORY(complication)
ADD_SUBDIRECTORY(watchdog)
