CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

SET(AMD_MOD_EXTRACTOR "amd-mod-extractor")
SET(AMD_MOD_EXTRACTOR_DIR ${CMAKE_SOURCE_DIR}/modules/extractor)
PROJECT(${AMD_MOD_EXTRACTOR} C)
AUX_SOURCE_DIRECTORY(${AMD_MOD_EXTRACTOR_DIR}/src AMD_MOD_EXTRACTOR_SOURCES)

# Set required packages
INCLUDE(FindPkgConfig)

SET(AMD_MOD_EXTRACTOR_PKG_CHECK_MODULES
	dlog
	glib-2.0
	gio-2.0
	aul
	libtzplatform-config
	)

pkg_check_modules(amd_mod_extractor_pkgs REQUIRED ${AMD_MOD_EXTRACTOR_PKG_CHECK_MODULES})

FOREACH(flag ${amd_mod_extractor_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

# Compiler flags
INCLUDE_DIRECTORIES(${AMD_MOD_EXTRACTOR_DIR}/inc)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,-zdefs" )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fpic")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Werror")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_SKIP_BUILD_RPATH true)
SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed")

ADD_LIBRARY(${AMD_MOD_EXTRACTOR} ${AMD_MOD_EXTRACTOR_SOURCES})
SET_TARGET_PROPERTIES(${AMD_MOD_EXTRACTOR} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
TARGET_LINK_LIBRARIES(${AMD_MOD_EXTRACTOR} ${amd_mod_extractor_pkgs_LDFLAGS} libamd)

INSTALL(TARGETS ${AMD_MOD_EXTRACTOR} DESTINATION ${AMD_MODULES_DIR}/mod COMPONENT RuntimeLibraries)
