CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

SET(AMD_MOD_INPUT "amd-mod-input")
SET(AMD_MOD_INPUT_DIR ${CMAKE_SOURCE_DIR}/modules/input)
PROJECT(${AMD_MOD_INPUT} C)
AUX_SOURCE_DIRECTORY(${AMD_MOD_INPUT_DIR}/src AMD_MOD_INPUT_SOURCES)

# Set required packages
INCLUDE(FindPkgConfig)

SET(AMD_MOD_INPUT_PKG_CHECK_MODULES
	dlog
	glib-2.0
	gio-2.0
	aul
	wayland-client
	wayland-tbm-client
	tizen-extension-client
	xkbcommon
	capi-system-info
	)

pkg_check_modules(amd_mod_input_pkgs REQUIRED ${AMD_MOD_INPUT_PKG_CHECK_MODULES})

FOREACH(flag ${amd_mod_input_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

# Compiler flags
INCLUDE_DIRECTORIES(${AMD_MOD_INPUT_DIR}/inc)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,-zdefs" )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fpic")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Werror")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_SKIP_BUILD_RPATH true)
SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed")

ADD_LIBRARY(${AMD_MOD_INPUT} ${AMD_MOD_INPUT_SOURCES})
SET_TARGET_PROPERTIES(${AMD_MOD_INPUT} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
TARGET_LINK_LIBRARIES(${AMD_MOD_INPUT} ${amd_mod_input_pkgs_LDFLAGS} libamd)

INSTALL(TARGETS ${AMD_MOD_INPUT} DESTINATION ${AMD_MODULES_DIR}/mod COMPONENT RuntimeLibraries)
INSTALL(FILES ${AMD_MOD_INPUT_DIR}/conf/amd_input.conf DESTINATION ${AMD_MODULES_DIR}/conf)
