CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

SET(AMD_MOD_LAUNCHPAD "amd-mod-launchpad")
SET(AMD_MOD_LAUNCHPAD_DIR ${CMAKE_SOURCE_DIR}/modules/launchpad)
PROJECT(${AMD_MOD_LAUNCHPAD} C)
AUX_SOURCE_DIRECTORY(${AMD_MOD_LAUNCHPAD_DIR}/src AMD_MOD_LAUNCHPAD_SOURCES)

# Set required packages
INCLUDE(FindPkgConfig)

SET(AMD_MOD_LAUNCHPAD_PKG_CHECK_MODULES
	dlog
	glib-2.0
	gio-2.0
	libsystemd
	security-manager
	libtzplatform-config
	libsmack
	tanchor
	)

pkg_check_modules(amd_mod_launchpad_pkgs REQUIRED ${AMD_MOD_LAUNCHPAD_PKG_CHECK_MODULES})

FOREACH(flag ${amd_mod_launchpad_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

# Compiler flags
INCLUDE_DIRECTORIES(${AMD_MOD_LAUNCHPAD_DIR}/inc)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,-zdefs" )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fpic")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Werror")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_SKIP_BUILD_RPATH true)
SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed")

ADD_LIBRARY(${AMD_MOD_LAUNCHPAD} ${AMD_MOD_LAUNCHPAD_SOURCES})
SET_TARGET_PROPERTIES(${AMD_MOD_LAUNCHPAD} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
TARGET_LINK_LIBRARIES(${AMD_MOD_LAUNCHPAD} ${amd_mod_launchpad_pkgs_LDFLAGS} libamd)

INSTALL(TARGETS ${AMD_MOD_LAUNCHPAD} DESTINATION ${AMD_MODULES_DIR}/mod COMPONENT RuntimeLibraries)
