CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

SET(AMD_MOD_SPLASH_SCREEN "amd-mod-splash-screen")
SET(AMD_MOD_SPLASH_SCREEN_DIR ${CMAKE_SOURCE_DIR}/modules/splash-screen)
PROJECT(${AMD_MOD_SPLASH_SCREEN} C)
AUX_SOURCE_DIRECTORY(${AMD_MOD_SPLASH_SCREEN_DIR}/src AMD_MOD_SPLASH_SCREEN_SOURCES)

# Set required packages
INCLUDE(FindPkgConfig)

SET(AMD_MOD_SPLASH_SCREEN_PKG_CHECK_MODULES
	aul
	dlog
	bundle
	sensor
	glib-2.0
	gio-2.0
	wayland-client
	wayland-tbm-client
	tizen-extension-client
	tizen-launch-client
	capi-system-info
	)

PKG_CHECK_MODULES(amd_mod_splash_screen_pkgs REQUIRED ${AMD_MOD_SPLASH_SCREEN_PKG_CHECK_MODULES})

FOREACH(flag ${amd_mod_splash_screen_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

# Compiler flags
INCLUDE_DIRECTORIES(${AMD_MOD_SPLASH_SCREEN_DIR}/inc)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,-zdefs" )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fpic")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Werror")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_SKIP_BUILD_RPATH true)
SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed")

ADD_LIBRARY(${AMD_MOD_SPLASH_SCREEN} ${AMD_MOD_SPLASH_SCREEN_SOURCES})
SET_TARGET_PROPERTIES(${AMD_MOD_SPLASH_SCREEN} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
TARGET_LINK_LIBRARIES(${AMD_MOD_SPLASH_SCREEN} ${amd_mod_splash_screen_pkgs_LDFLAGS} libamd)

INSTALL(TARGETS ${AMD_MOD_SPLASH_SCREEN} DESTINATION ${AMD_MODULES_DIR}/mod COMPONENT RuntimeLibraries)
